# trade

./: .env.example  .env.skyvern.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.skyvern.yml  docker-compose.stack.yml  pyproject.toml  start.sh  trade
.cursor/rules/: autonomous-trading-north-star.mdc  change-verification-and-commits.mdc  deep-root-cause-analysis.mdc  design-intent-debate-before-change.mdc  fix-review-before-stack.mdc  master-todo-ticker.mdc  multi-phase-plan-convergence.mdc  no-defer-migrate-forward.mdc  options-advisor-north-star.mdc  prediction-data-completeness.mdc  prediction-north-star.mdc  restart-services-yourself.mdc  review-evidence-discipline.mdc  subagent-driven-development.mdc  targeted-bug-fix-discipline.mdc  test-before-report.mdc
.github/workflows/: nightly-integration.yml
.superpowers/: master-todo.md
data/nse/: manifest.json
docs/: news-hub-bridge.md
exposure/: start.sh  status.sh  sync-host-server.sh
exposure/cloudflare/: quick-tunnel.sh  restart-tunnel.sh  stop.sh
integrations/nautilus_openalgo_bridge/: __init__.py  agent_limits.py  agent_scoping.py  alpaca_live_data.py  alpaca_quote_feed.py  bridge_signal_actor.py  config.py  data_feed.py  execute.py  factories.py  handoff.py  hub_paths.py  instrument_provider.py  instruments.py  intent_queue.py  market_hours.py  models.py  nautilus_config.py  nautilus_instruments.py  node.py  openalgo_client.py  openalgo_live_data.py  orders.py  poll_latency.py  preflight.py  queue_lock.py  reconcile.py  registry_paths.py  risk_actor.py  risk_state.py  signal_actions.py  stop_eval.py  thesis_eval.py  vibe_trigger.py  watch_actor.py  watch_eval.py  ws_feed.py
integrations/trade_integrations/: __init__.py  env.py  ml_runtime_env.py  register.py  stack_env_sync.py  stack_ports.py
scripts/: _migrate_http_gateway.py  archive_agent_debate_date.py  archive_constituent_history.py  audit_external_prediction_provenance.py  audit_external_prediction_urls.py  audit_hub_wiki_sync.py  audit_prediction_data.py  audit_prediction_hub_data.py  backfill_company_news_history.py  backfill_debate_archive.py  backfill_distilled_events.py  backfill_drawdown_news.py  backfill_historical_flows.py  backfill_historical_macro.py  backfill_historical_news.py  backfill_hub_wiki_sources.py  backfill_participant_oi.py  backfill_prediction_history.py  backfill_verified_news.py  bench_alpha_zoo_nifty50.py  bench_prediction_run.py  bootstrap_nse_chrome.sh  browse_options.py  check_http_gateway_usage.py  cleanup_autonomous_agents.py  cleanup_hub_wiki_legacy.py  data_router_status.py  data_router_worker.py  distill_hub_news.py  ensure_crawl4ai.sh  ensure_openalgo_venv.sh  ensure_prediction_ml.sh  ensure_vibe_frontend.sh  ensure_vibe_stack.sh  export_openalgo_fills.py  export_searxng_ca.sh  extend_hf_replay.py  finalize_hub_news_ssot.py  hub_inventory.py  hub_query.py  (+100 more)
stack/: ports.yaml
stack/searxng/: entrypoint-wrapper.sh  (+2 more)
tests/: conftest.py  test_agent_debate_wrapper.py  test_agent_execution_status.py  test_agent_intent_extractor.py  test_agent_schema_lifecycle.py  test_alpaca_nautilus_feed.py  test_autonomous_bootstrap.py  test_autonomous_bootstrap_watchdog.py  test_autonomous_commit_atomic.py  test_autonomous_commit_guards.py  test_autonomous_draft_agent.py  test_autonomous_infra_pause.py  test_autonomous_market.py  test_autonomous_mcp_actions.py  test_autonomous_prompt_compact.py  test_autonomous_proposal_session_id.py  test_autonomous_recovery.py  test_autonomous_scheduler_jobs.py  test_autonomous_thesis_break_dispatch.py  test_autonomous_turns.py  test_autonomous_watch.py  test_bridge_adjust_legs.py  test_bridge_intent_strategy_tag.py  test_bridge_signal_actor.py  test_broker_charges.py  test_calibrate_bottom_up.py  test_cascade_calibration.py  test_cascade_modules.py  test_causal_attribution.py  test_commit_session_promotion.py  test_company_news_backfill_rss.py  test_company_research_agent_integration.py  test_company_research_bse_india.py  test_company_research_calendar.py  test_company_research_calendar_us.py  test_company_research_fundamentals_filings_macro.py  test_company_research_market.py  test_company_research_peers_news.py  test_company_research_resilience.py  test_connector_context.py  (+245 more)
tradingagents/: default_config.py
(+1008 files in other folders)
