[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-stack"
version = "0.1.0"
description = "Trade stack integrations overlay for TradingAgents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
research = [
    "nselib>=2.0",
    "dalal>=0.2.1",
    "bse>=3.3.0",
    "finvizfinance>=1.3.0",
    "edgartools>=5.0.0",
    "finance-calendars>=0.0.7",
    "earnings>=1.1.0",
]
research-plus = [
    "trade-stack[research]",
]
stack = [
    "vibe-trading-ai>=0.1.11",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["integrations"]
include = ["trade_integrations*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tradingagents/tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
]
