[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-stack"
version = "0.1.0"
description = "Trade stack integrations overlay for TradingAgents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
research = [
    "nselib>=2.0",
    "dalal>=0.2.1",
    "bse>=3.3.0",
    "finvizfinance>=1.3.0",
    "edgartools>=5.0.0",
    "finance-calendars>=0.0.7",
    "earnings>=1.1.0",
]
research-plus = [
    "trade-stack[research]",
    "finverse>=0.7",
]
stack = [
    # Editable install from vibetrading/ submodule (see start.sh bootstrap).
    # pip install -e vibetrading/
]
options = [
    "trade-stack[research]",
    "qfinindia>=0.3.2",
    "optionlab>=1.3.2",
    "finworth>=0.7.0",
    "opengreeks>=0.2.0",
]
dev = [
    "pytest>=8.0",
]
nautilus = [
    "nautilus_trader>=1.228",
    "redis>=5.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["integrations"]
include = ["trade_integrations*", "nautilus_openalgo_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tradingagents/tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
]
