[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-stack"
version = "0.1.0"
description = "Trade stack integrations overlay for TradingAgents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
research = [
    "pyarrow>=15.0",
    "duckdb>=1.2.0",
    "psycopg[binary]>=3.1",
    "nselib>=2.0",
    "dalal>=0.2.1",
    "bse>=3.3.0",
    "screenercli>=0.1.2",
    "finvizfinance>=1.3.0",
    "edgartools>=5.0.0",
    "finance-calendars>=0.0.7",
    "earnings>=1.1.0",
]
research-plus = [
    "trade-stack[research]",
    "finverse>=0.7",
]
stack = [
    # Editable install from vibetrading/ submodule (see start.sh bootstrap).
    # pip install -e vibetrading/
]
options = [
    "trade-stack[research]",
    "qfinindia>=0.3.2",
    "optionlab>=1.3.2",
    "finworth>=0.7.0",
    "opengreeks>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
prediction = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "darts>=0.30",
]
execution-sim = [
    "backtrader>=1.9",
    "vectorbt>=0.26",
]
nse-browser = [
    "nodriver>=0.38",
    "curl_cffi>=0.7",
    "opencv-python-headless>=4.8",
    "openai>=1.40",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "requests>=2.34.2",
]
nse-browser-agent = [
    "trade-stack[nse-browser]",
]
nautilus = [
    "nautilus_trader>=1.228",
    "redis>=5.0",
    "requests>=2.34.2",
    "websocket-client>=1.8",
]
external-predictions = [
    "crawl4ai>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["integrations"]
include = ["trade_integrations*", "nautilus_openalgo_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tradingagents/tests"]
addopts = "-ra --strict-markers --timeout=120"
timeout = 120
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
]
